--- a/new.html
+++ b/new.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style_for_new.css" type="text/css">
+  <title>Document</title>
 </head>
-
 <body>
-  branch  
+  <header>
+    <h1>
+      <span class="heading__main">learning english</span>
+      <span class="heading__sub">inspirs to achieve more</span>
+    </h1>
+     <div class="menu">
+    <button class="menu__button">MENU</button>
+    <div class="menu__dropdown">
+      <a href="#">COURSES</a>
+      <a href="#">GRAMMAR</a>
+      <a href="#">SECTIONS</a>
+      <a href="#">PRONANCIATION</a>
+    </div>
+  </div>
+  </header>
 </body>
 </html>
