--- a/index.html
+++ b/index.html
@@ -2,33 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <ul class="menu_gor">
-            <li><a href="#">row1</a></li>
-            <li><a href="#">row2</a></li>
-            <li class="dropdown"><a href="#" class="dropbth">row3</a>
-            <div class="dropdown_content">
-                <a href="#">step1</a>
-                <a href="#">step2</a>
-                <a href="#">step3</a>
-                <a href="#">step4</a>
-            </div>
-            </li>
-            <li style="float: right"><a href="#">row4</a></li>
-        </ul>
-    </nav>
-    <div class="drdowimg">
-        <img src="image/cover.jpg" alt="mountais"  width="100px" height="200">
-        <div class="drdowimg_content">
-        <img src="image/cover.jpg" alt="mountais"  width="200px" height="300">
-        <div class="drdowimg_name">mountains</div>     
-            </div>
+    <div class="container">
+        <div class="container-box-1">
+            <div class="item1"><p>1</p></div>
+            <div class="item1"><p>2</p></div>
+            <div class="item1"><p>3</p></div>
+            <div class="item1"><p>4</p></div>
+        </div>
+        <div class="container-box-2">
+            <div class="item2"><p>5</p></div>
+            <div class="item2"><p>6</p></div>
+            <div class="item2"><p>7</p></div>
+            <div class="item2"><p>8</p></div>
+            <div class="item2"><p></p></div>
+            <div class="item2"><p></p></div>
+            <div class="item2"><p></p></div>
+            <div class="item2"><p></p></div>
+            <div class="item2"><p></p></div>
+        </div>
     </div>
 </body>
 </html>
