--- a/new.html
+++ b/new.html
@@ -4,32 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style_for_new.css" type="text/css">
+  <link rel="stylesheet" href="style-for-new.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
-  <h1 class="header">
-    <span class="header_main">liam sydorenko</span>
-    <span class="header_sub">third year of life</span>
-  </h1>
-  <nav class=navbar>
-    <ul class="navmenu">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Events</a></li>
-      <li class="dropdown"><a href="#" class="dropbth">Photos</a>
-      <div class="dropdown_content">
-        <a href="#" >Birthday party</a>
-        <a href="#" >New year</a>
-        <a href="#" >Vacation</a>
-      </div>
-    </li>
-      <li><a href="#">Notes</a></li>
-      <li><a href="#">New achievements</a></li>
-    </ul>
-  </nav>
-  <div class="box">
-  <a href="#" class="button">discover <br> monthly growth</a>
+  <div class="wrapper">
+      <h1 class="text-header">
+        <div class="header_main">liam sydorenko</div>
+        <div class="header_sub">third year of life</div>
+      </h1>
+      <nav> 
+        <ul class="navmenu">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Events</a></li>
+          <li class="dropdown"><a href="#">Photos</a>
+            <div class="dropdown_content">
+              <a href="#" >Birthday party</a>
+              <a href="#" >New year</a>
+              <a href="#" >Vacation</a>
+            </div>
+          </li>
+          <li><a href="#">Notes</a></li>
+          <li><a href="#">New achievements</a></li>
+        </ul>
+      </nav>
   </div>
-  </body>
+  <div class="main-box">
+    <a href="#" class="button">discover <br> monthly growth</a>
+  </div>
+</body>
 </html>
